--- a/QoListings/qolistings.sty
+++ b/QoListings/qolistings.sty
@@ -17,6 +17,7 @@
 }
 
 \DeclareStringOption[false]{frame}
+\DeclareStringOption[qolistingsmain]{style}
 \DeclareBoolOption[false]{background}
 \DeclareBoolOption[false]{latexcomments}
 \DeclareBoolOption[false]{latexmaths}
@@ -31,7 +32,7 @@
 \def\instring#1#2{TT\fi\begingroup
   \edef\x{\endgroup\noexpand\in@{#1}{#2}}\x\ifin@} % Used for frame options to tell if a given side is included
 
-\newcommand{\colorprovide}[2]{\@ifundefinedcolor{#1}{\colorlet{#1}{#2}}{}}      % (*Only defines the new colour if it has not already been defined*)
+\newcommand{\colourprovide}[2]{\@ifundefinedcolor{#1}{\colorlet{#1}{#2}}{}}      % (*Only defines the new colour if it has not already been defined*)
 
 % (*Now we define the default colour scheme if and only if a scheme has not already been loaded. This should avoid issues of loading order if both \texttt{qolistings} and \texttt{officecolours} packages are used.*)
 
@@ -47,23 +48,23 @@
   {,}%
   {%
     \providecolor{\thislevelitem}{HTML}{\csname twilight@\thislevelitem\endcsname}%
-    \colorprovide{\thislevelitem_1}{\thislevelitem!50!black}
-    \colorprovide{\thislevelitem_2}{\thislevelitem!75!black}
-    \colorprovide{\thislevelitem_3}{\thislevelitem!60!white}
-    \colorprovide{\thislevelitem_4}{\thislevelitem!40!white}
-    \colorprovide{\thislevelitem_5}{\thislevelitem!20!white}
+    \colourprovide{\thislevelitem_1}{\thislevelitem!50!black}
+    \colourprovide{\thislevelitem_2}{\thislevelitem!75!black}
+    \colourprovide{\thislevelitem_3}{\thislevelitem!60!white}
+    \colourprovide{\thislevelitem_4}{\thislevelitem!40!white}
+    \colourprovide{\thislevelitem_5}{\thislevelitem!20!white}
   }
   {ForegroundColour,Accent1,Accent2,Accent3,Accent4,Accent5,Accent6,Hyperlink,FollowedHyperlink}
   \providecolor{BackgroundColour}{HTML}{\csname twilight@BackgroundColour\endcsname}%
-  \colorprovide{BackgroundColour_5}{BackgroundColour!90!black}
-  \colorprovide{BackgroundColour_4}{BackgroundColour!75!black}
-  \colorprovide{BackgroundColour_3}{BackgroundColour!50!black}
-  \colorprovide{BackgroundColour_2}{BackgroundColour!25!black}
-  \colorprovide{BackgroundColour_1}{BackgroundColour!10!black}
+  \colourprovide{BackgroundColour_5}{BackgroundColour!90!black}
+  \colourprovide{BackgroundColour_4}{BackgroundColour!75!black}
+  \colourprovide{BackgroundColour_3}{BackgroundColour!50!black}
+  \colourprovide{BackgroundColour_2}{BackgroundColour!25!black}
+  \colourprovide{BackgroundColour_1}{BackgroundColour!10!black}
 
 % (*Now we define a set of useful styles for listings*)
 
-\lstdefinestyle{main}{
+\lstdefinestyle{qolistingsmain}{
     commentstyle        = \color{ForegroundColour_3},
     keywordstyle        = \color{Accent1}\scshape,
     numberstyle         = \tiny\color{ForegroundColour},
@@ -97,6 +98,7 @@
 \define@key{qoGlobal}{lst options}{\def\qoGlobal@lstoptions{#1}}
 \define@key{qoGlobal}{lst early options}{\def\qoGlobal@lstearlyoptions{#1}}
 \define@key{qoGlobal}{frame}[true]{\def\qoGlobal@frame{#1}}
+\define@key{qoGlobal}{style}{\def\qoGlobal@style{#1}}
 \define@key{qoGlobal}{background}[true]{\def\qoGlobal@background{#1}}
 \define@key{qoGlobal}{rounded corners}[true]{\def\qoGlobal@roundedcorners{#1}}
 \define@key{qoGlobal}{latex comments}[true]{\def\qoGlobal@latexcomments{#1}}
@@ -113,7 +115,8 @@
     rounded corners = \ifqolstglobalop@roundedcorners true\else false\fi,
     latex comments = \ifqolstglobalop@latexcomments true\else \ifqolstglobalop@latex true\else false\fi\fi,
     latex maths = \ifqolstglobalop@latexmaths true\else \ifqolstglobalop@latex true\else false\fi\fi, % TODO -- Include US spelling as well, without overriding UK spelling
-    mdframed options = {}
+    mdframed options = {},
+    style = \qolstglobalop@style
 }
 
 \newcommand{\qolstset}[1]{
@@ -145,6 +148,10 @@
 \define@key{qo}{latex maths}[true]{\setboolean{qoLatexMaths}{#1}}
 \define@key{qo}{latex math}[true]{\setboolean{qoLatexMaths}{#1}} % (*Allow for US spelling as well.*)
 \define@key{qo}{mdframed options}{\def\qo@mdframedoptions{#1}}
+\define@key{qo}{first line}{\def\qo@firstline{#1}}
+\define@key{qo}{last line}{\def\qo@lastline{#1}}
+\define@key{qo}{first number}{\def\qo@firstnumber{#1}}
+\define@key{qo}{style}[qolistingsmain]{\def\qo@style{#1}}
 
 \newcommand{\setkeydefaults}{\setkeys{qo}{% Default to the global options for everything except lst option and mdframed options
     lst options = {},
@@ -154,23 +161,27 @@
     rounded corners = \qoGlobal@roundedcorners,
     latex comments = \qoGlobal@latexcomments,
     latex maths = \qoGlobal@latexmaths,
-    mdframed options = {}
+    mdframed options = {},
+    first line = 1,
+    last line = 99999,
+    first number = 1,
+    style = \qoGlobal@style
 }}
 
-\lstset{style = main}
+\lstset{style = qolistingsmain}
 
-\def\mainstyle{, style = main, }
+\def\mainstyle{, style = qolistingsmain, }
 
 \newcommand{\qoinputlisting}[2][]{
     % Process key-value pairs
     \setkeydefaults%
     \setkeys{qo}{#1}
-
+%
     \begingroup     % (* We only wish to set these locally, but cannot pass them as optional arguments to \verb|\lstinputlisting| without much more complicated expansions. This is a terrible solution.*)
     %
         \expandafter\lstset\expandafter{\qoGlobal@lstearlyoptions} % Apply the global early options before local options
-        \expandafter\lstset\expandafter{\qo@lstearlyoptions} % Apply the early options before setting the main style
-        \lstset{style = main}
+        \expandafter\lstset\expandafter{\qo@lstearlyoptions} % Apply the early options before setting the qolistingsmain style
+        \lstset{style = \qo@style}
         % LaTeX Comments:
         \ifthenelse{
             \boolean{qoLatexComments}
@@ -189,7 +200,7 @@
         }
         %
         \expandafter\lstset\expandafter{\qoGlobal@lstoptions} % Apply remaining global lst options before local options
-        \expandafter\lstset\expandafter{\qo@lstoptions} % Apply remaining lst options to override any in the main style
+        % \expandafter\lstset\expandafter{\qo@lstoptions} % Apply remaining lst options to override any in the qolistingsmain style
         %
         \mdfsetup{ % Prepare the default margins for mdframed
             innerleftmargin = 5pt,
@@ -260,7 +271,7 @@
         \expandafter\mdfsetup\expandafter{\qo@mdframedoptions}%
         % Now create the actual listing.
         \begin{mdframed}%
-            \leavevmode\lstinputlisting{#2}% Leavevmode to avoid issues with paragraph breaks changing top margins for some reason.
+            \leavevmode\lstinputlisting[firstline = \qo@firstline, lastline = \qo@lastline, firstnumber = \qo@firstnumber]{#2}% Leavevmode to avoid issues with paragraph breaks changing top margins for some reason.
         \end{mdframed}%
     \endgroup%
 }
@@ -274,8 +285,8 @@
     \begingroup     % (* We only wish to set these locally, but cannot pass them as optional arguments to \verb|\lstinputlisting| without much more complicated expansions. This is a terrible solution.*)
     %
         \expandafter\lstset\expandafter{\qoGlobal@lstearlyoptions} % Apply the global early options before local options
-        \expandafter\lstset\expandafter{\qo@lstearlyoptions} % Apply the early options before setting the main style
-        \lstset{style = main}
+        \expandafter\lstset\expandafter{\qo@lstearlyoptions} % Apply the early options before setting the qolistingsmain style
+        \lstset{style = \qo@style}
         % LaTeX Comments:
         \ifthenelse{
             \boolean{qoLatexComments}
@@ -294,7 +305,8 @@
         }
         %
         \expandafter\lstset\expandafter{\qoGlobal@lstoptions} % Apply remaining global lst options before local options
-        \expandafter\lstset\expandafter{\qo@lstoptions} % Apply remaining lst options to override any in the main style
+        \expandafter\lstset\expandafter{\qo@lstoptions} % Apply remaining lst options to override any in the qolistingsmain style
+        \lstset{firstnumber = \qo@firstnumber}
         %
         \mdfsetup{ % Prepare the default margins for mdframed
             innerleftmargin = 5pt,
@@ -364,11 +376,8 @@
         \expandafter\mdfsetup\expandafter{\qo@mdframedoptions}% Apply the global options first, before the local options.
         \expandafter\mdfsetup\expandafter{\qo@mdframedoptions}%
         % Now create the actual listing.
-        \mdframed
+        \mdframed\leavevmode
 }{
         \endmdframed%
     \endgroup\ignorespaces%
 }
-
-
-% Environment hangs when nested!
