--- a/QoListings/qolistingsExample.tex
+++ b/QoListings/qolistingsExample.tex
@@ -15,7 +15,7 @@
 \title{\texttt{qolistings.sty} Package}
 \author{Peter Brookes Chambers}
 \date{\today{}}
-% \newcommand{\option}[3]{\begin{multicols}{3}\noindent\texttt{\color{Accent1}#1}\leavevmode\\\textit{#2}\leavevmode\\\textit{#3}\end{multicols}\leavevmode}
+%
 \newcommand{\option}[4][]{\noindent\begin{tikzpicture}
 \node[right] (option) at (0, 0) {\texttt{\color{Accent1}#2}};
 \node[] at (\linewidth * 0.5, 0) {\normalcolor\textit{#3}};
@@ -23,32 +23,26 @@
 \node[below = 0.0em of option.south west, anchor = north west] {\color{Accent2}\texttt{#1}\normalcolor};
 \end{tikzpicture}
 }
-% \newcommand{\option}[3]{\noindent\texttt{\color{Accent1}#1}\hfill\textit{#2}\hfill\textit{#3}}
 
 \newcommand{\ttt}[1]{\texttt{#1}}
 
-\lstdefinestyle{foo}{
-    commentstyle        = \color{Accent2},
-    keywordstyle        = \color{Accent4}\scshape,
-    numberstyle         = \tiny\color{BackgroundColour},
-    stringstyle         = \color{ForegroundColour},
-    basicstyle          = \ttfamily\small\color{Accent1},
+\newcommand{\example}[1]{%
+    \qoinputlisting[mdframed options = {linecolor = Accent3}, frame, background, rounded corners, lst options = {language = {[LaTeX]TeX}}]{./listings/#1}
+
+    \input{./listings/#1}
+}
+\lstdefinestyle{exampleStyle}{
+    commentstyle        = \color{Accent3},
+    keywordstyle        = \color{ForegroundColour}\scshape,
+    numberstyle         = \tiny\color{Accent1},
+    stringstyle         = \color{Accent5},
+    basicstyle          = \ttfamily\small\color{Accent2},
     breakatwhitespace   = false,
     breaklines          = true,
-    captionpos          = b,
     keepspaces          = true,
-    numbers             = left,
-    numbersep           = 18pt,
-    showspaces          = true,
+    showspaces          = false,
     showstringspaces    = false,
-    showtabs            = false,
-    tab                 = {\color{ForegroundColour_5}|\ \ \ \ },% (*Define the tab behaviour anyway so that it's already defined if \texttt{showtabs} is overridden*)
-    tabsize             = 4,
-  	xleftmargin         = 0pt,
-  	xrightmargin        = 0cm,
-    breakindent         = 1.5em,
-    escapebegin = \normalfont\color{ForegroundColour_3},
-    escapeend = \normalcolor
+    showtabs            = false
 }
 
 \hypersetup{
@@ -70,189 +64,155 @@
 \tableofcontents{}
 \clearpage
 \pagenumbering{arabic}
+
 \section{Introduction}
 
-This package builds on the \href{https://ctan.math.illinois.edu/macros/latex/contrib/listings/listings.pdf}{\texttt{listings}} package to provide appealing and professional default styles with an easy interface for common options. It also encorporates the colour schemes defined in the \texttt{qocolours} package. However, the \texttt{qolistings} package can be used independently of \texttt{qocolours}; if \texttt{qocolours} is not used, then the default theme of \texttt{twilight} is also defined in the \ttt{qolistings} package.
+This package builds on the \ttt{listings} package to provide appealing and professional default styles, integrating the superior background and frame handling of the \ttt{mdframed} package. The aim is for these styles to be easily adapted to match the surrounding document, with simple options for common requirements. The QoListings package provides little additional functionality; instead, the emphasis is on making clear, aesthetically appealing listings quicker and easier to include.
 
-If, however, \ttt{qocolours} is loaded before \ttt{qolistings} the scheme selected from \ttt{qocolours} is not overwritten; to allow for this functionallity, a new command \verb|\colourprovide| (note that this uses the U.K. spelling) is defined. This has the same syntax and behaviour as the  \verb|colorlet| command from the \ttt{xcolor} package, except that if the colour name is already in use it will not be changed. In other words, \verb|\colourprovide| is to \verb|\colorlet| as \verb|\providecolor| is to \verb|\definecolor|. Although this command is not really related to the rest of the \ttt{qolistings} package, it is public-facing and so included in this documentation.
+The QoListings package is designed to incorporate the colour schemes defined by the QoColours package, such that if the QoColours package is used in the same document then the colours used in the default listing style of QoListings will be chosen from the QoColours scheme. However, the QoColours package is not necessary; if the QoColours package is not used, then QoListings defines a scheme identical to the default \ttt{twilight} scheme of QoColours.
 
-All listings are encased in an \texttt{mdframed} environment. Then, \ttt{mdframed} handles the rendering of backgrounds and frames (if present), which produces much more consistent results than the frame and background handling in the \ttt{listings} package, especially for wrapped lines and vairable line heights. By default, tikz rendering is used for the \ttt{mdframed} frames.
+\section{Package Requirements}
 
-\subsection{Package Requirements}
+The following packages are each required for the QoListings package.
 
-In addition to \ttt{listings} and \ttt{mdframed}, the \ttt{qolistings} package requires several other packages to be present. These (in full) are as follows:
 \begin{itemize}
-    \item \href{https://www.ctan.org/pkg/listings}{\texttt{listings}}
+    \item \href{https://ctan.org/pkg/listings}{\ttt{listings}}
     \item \href{https://ctan.org/pkg/mdframed}{\ttt{mdframed}}
     \begin{itemize}
-        \item \href{https://www.ctan.org/pkg/pgf}{\ttt{tikz}}
+        \item \href{https://ctan.org/pkg/pgf}{\ttt{tikz}}
     \end{itemize}
-    \item \href{https://www.ctan.org/pkg/xcolor}{\ttt{xcolor}}
-    \item \href{https://www.ctan.org/pkg/forarray}{\ttt{forarray}}
-    \item \href{https://www.ctan.org/pkg/keyval}{\ttt{keyval}}
-    \item \href{https://www.ctan.org/pkg/ifthen}{\ttt{ifthen}}
-    \item \href{https://www.ctan.org/pkg/kvoptions}{\ttt{kvoptions}}
+    \item \href{https://ctan.org/pkg/xcolor}{\ttt{xcolor}}
+    \item \href{https://ctan.org/pkg/forarray}{\ttt{forarray}}
+    \item \href{https://ctan.org/pkg/keyval}{\ttt{keyval}}
+    \item \href{https://ctan.org/pkg/ifthen}{\ttt{ifthen}}
+    \item \href{https://ctan.org/pkg/kvoptions}{\ttt{kvoptions}}
+\end{itemize}
+
+In addition, the following packages are required \textbf{if and only if} coloured inline backgrounds are used (see section \ref{section:loading the package}).
+\begin{itemize}
+    \item \href{https://ctan.org/pkg/xpatch}{\ttt{xpatch}}
+    \item \href{https://ctan.org/pkg/realboxes}{\ttt{realboxes}}
 \end{itemize}
 
 \section{Usage}
 
-The package can be loaded with \verb|\usepackage{qolistings}|. Optional arguments can be given in a comma-separated key-value format. See section \ref{section:Optional Arguments} for a list of optional arguments; those given in \color{Accent2}blue\normalcolor{} can be passed as optional arguments when loading the package. Unfortunately, \texttt{lst options}, \ttt{lst early options}, and \ttt{mdframed options} cannot be passed as arguments when loading the package. In addition, the \ttt{frame} option, which normally can be passed without a value, \textbf{must} be given a value when being passed to \verb|\usepackage|. Any option given when loading the package will be used as the default value throughout the document, but can be overwritten for each listing individually, or globally using \verb|\qolstset|.
+\subsection{Loading the Package\label{section:loading the package}}
 
-The macro \verb|\qolstset| takes one mandatory argument, which should be a comma-separated series of key-value pairs. These can again be found in section \ref{section:Optional Arguments}, this time in \color{Accent1}yellow\normalcolor{}. If \texttt{lst options}, \ttt{lst early options}, or \ttt{mdframed options} are to be set globally, this should be done using the \verb|\qolstset| macro.
+The package can be loaded with \qoinline[language = {[LaTeX]TeX}]|\usepackage{qolistings}|. It takes a variety of optional arguments in a comma-separated list of key-value pairs. Most of these correspond to options which can also be set locally, and are given in section \ref{section:key-value pairs} in \textcolor{Accent2}{blue}. However, there are two options which can only be passed to the package; \qoinline|caps| (and the equivalent opposite \qoinline|nocaps|), and \qoinline|inlinebackgrounds|. Passing the options \qoinline|caps| modifies the default listing style to typeset keywords in the \qoinline|\scshape| style (for example, \textsc{Small Capitals Shape}). The default \qoinline|nocaps| does not use small capitals. The \qoinline|inlinebackgrounds| option (which is true by default) uses \ttt{xpatch} to apply a colour box to all inline listings. To prevent this (and subsequently not require the \ttt{xpatch} and \ttt{realboxes} packages), one must pass \qoinline|inlinebackgrounds = false| when loading the package.
 
-\subsection{The \texttt{\textbackslash{}qoinputlisting} Command}
+All other options are given in \ref{section:key-value pairs}, with any differences in behaviour to the local options noted there.
 
-This command is analogous to the \verb|\lstinputlisting| command provided by the \texttt{listings} package. It takes one mandatory argument, which should be the name of the file to include, and one optional argument which should be a series of comma-separated key-value pairs (parsed by the \texttt{keyval} package). The list of optional arguments can be found in section \ref{section:Optional Arguments}.
+\subsection{Macros and Environments}
 
-\subsection{The \ttt{qolisting} Environment}
+\noindent\qoinline|\qolstset{}|
 
-This environment is analogous to the \ttt{listing} environment provided by the \ttt{listings} package. It takes one optional argument, which should be a series of comma-separated key-value pairs. The list of optional arguments can be found in section \ref{section:Optional Arguments}.
+This macro takes one mandatory argument, which should be a comma-separated series of key-value pairs. Appropriate pairs can be found in section \ref{section:key-value pairs} in \textcolor{Accent1}{yellow}. These are then set globally; any options passed to \qoinline|\qolstset{}| will be applied to all subsequent listings in the document, unless overwritten (locally or globally).
 
-\subsection{Optional Arguments\label{section:Optional Arguments}}
+\noindent\qoinline|\qoinputlisting[]{}|
 
-The optional arguments for the commands in the \verb|\qolistings| package are listed here in \color{Accent1}yellow\normalcolor{}, followed by the allowable values, then the default value. A value of ``-" indicates that the key can be given with no values, in which case it is given a value of ``true". The corresponding package options, where appropriate, are given in \color{Accent2}blue\normalcolor{}.
+This macro is analogous to the \qoinline|\lstinoutlisting| macro from the \ttt{listings} package. It takes one optional argument and one mandatory argument. The mandatory argument should be a path to the file to be inlcuded, and the optional argument should again be a comma-separated series of key-value pairs, given in section \ref{section:key-value pairs} in \textcolor{Accent1}{yellow}. These are only applied locally to that single listing.
+
+\noindent\qoinline|qolisting| Environment
+
+This environment is analogous to the \qoinline|lstlisting| environment from the \ttt{listings} package. When beginning the environment, one optional argument can be passed to the environment. Again, this should be a comma-separated series of key-value pairs, given in section \ref{section:key-value pairs} in \textcolor{Accent1}{yellow}. These are only applied locally to that single listing. Any text within the environment is then typeset verbatim as a listing.
+
+\noindent\qoinline{\qoinline||}
+
+This macro is analogous to the \qoinline{\lstinline||} macro, and typesets any text between the two delimiter tokens as a listing inline with the surrounding text. Optional arguments can be passed to this macro, however these must be valid key-value pairs for the \qoinline|\lstinline| macro (\textbf{not} those given in section \ref{section:key-value pairs}). If the package option \qoinline|inlinebackgrounds| is true, then the inline listing will have a coloured background. Note that this will not linewrap long inline listings.
+
+\subsection{Key-Value Pairs\label{section:key-value pairs}}
+
+The following are the allowable key-value pairs for most QoListings macros and environments. The key (local and global where available) is given on the left, allowable values in the centre, and the default value on the right. A dash (``\textit{-}") indicates that the key can be passed with no value, in which case it will be given a value of \textit{true}.
 
 \option{lst options}{any}{\{\}}
 
-This option takes as its argument a list of key-value pairs to be passed to the \texttt{listings} package, which should be encased in single braces only (for example, \verb|lst options = {stringstyle = \color{red}, commentstyle = \tiny}|). Encasing these in double braces will cause errors as this will not be correctly expanded before being passed to the \texttt{keyval} package by \texttt{listings}.
-
-These key-value pairs must also be valid options for a style in the \texttt{listings} package. These are applied \textbf{after} the default style (and any other options), and so if a key is given a value in both \texttt{lst options} and the default style, the value given in \texttt{lst options} is used.
+This option takes as its value any string which would be valid for the \qoinline|\lstset| macro from the \ttt{listings} package. This must be surrounded by single braces only. For example,\\
+\indent\qoinline|lst options = {stringstyle = \color{red}, language = Python}|\\
+would be acceptable, but\\
+\indent\qoinline|lst options = {{stringstyle = \color{red}, language = Python}}|\\
+would not. These options are applied last, after the default style, and so can be used to overwrite anything defined in other options. The global options (set with \qoinline|qolstset{}|) are applied, followed by the local options.
 
 \option{lst early options}{any}{\{\}}
 
-This option is almost identical to the \texttt{lst options} option, except that it is applied \textbf{before} the default style (and subsequently before \texttt{lst options}), and so key-value pairs given in \texttt{lst early options} have the lowest priority. This doesn't currently have many direct applications, but should allow for more compatibility should this package be expanded.
+This option is identical to \ttt{lst options}, except that they are applied first, before the default style. Again, the global options (set with \qoinline|qolstset{}|) are applied, followed by the local options.
 
 \option[style]{style}{any}{qolistingsmain}
 
-The style to be used for listings. This must be a valid name for a defined style. If \ttt{style} is passed as a package argument, then the style must be defined before the first listing. The default style of \ttt{qolistingsmain} is the style defined in the \ttt{qolistings} package.
+This option defines the style to be applied to the listing. This can be any style defined with the \qoinline|\lstdefinestyle| macro from the \ttt{listings} package, or the default style \ttt{qolistingsmain}. When this option is set using the \qoinline|\qolstset| command or in the optional argument of the \qoinline|\qoinputlisting| or \qoinline|qolisting| environment, the style must have already been defined. When this option is passed to the package, the style must be defined before the first listing.
 
 \option[latexcomments]{latex comments}{-, true, false}{false}
 
-If true, then comments encased by the \texttt{escapeinside} tokens are rendered as normal \LaTeX{} code rather than printed verbatim. By default, the escape tokens are ``\verb|(*|" and ``\verb|*)|", though these can of course be changed by passing \verb|{escapeinside = {<token1>}{<token2>}}| to the \texttt{lst options} key.
+When true, this option causes any text encased in the escape delimiters (by default, these are \qoinline|(*| and \qoinline|*)|, but this can be changed using the apptopriate options in the \ttt{listings} package) to be rendered as \LaTeX{} rather than being preinted verbatim. This is intended to be used for code comments, but unfortunately is not restricted to comments, and so any text encased in the escape delimiters will be rendered as \LaTeX{}, and so \textbf{must} be valid \LaTeX{} syntax.
 
 \option[latexmaths]{latex maths}{-, true, false}{false}\\
 \option[latexmath]{latex math}{-, true, false}{false}
 
-If true (either with the U.S. or U.K. spelling), anything encased in dollar signs will be rendered as \LaTeX{} maths rather than printed verbatim. Note that this applies to the entire file, not just to comments, and is independent of the \texttt{latex comments} option. This means that any \$ anywhere in the file must be accompanied by a corresponding closing \$, and the contents \textbf{must} be valid input for a \LaTeX{} maths environment. (Be especially careful of escape sequences! Even strings written to be valid \LaTeX{} when printed or passed to plotting tools may not be if backslashes need to be escaped.)
+When true (either in the U.K. spelling or the U.S. spelling), any text encased in dollar signs will be rendered as \LaTeX{} maths rather than printed vevrbatim. Again, this is not restricted to comments, and so any text encased in dollar signs will be rendered as \LaTeX{} maths, and so must be valid \LaTeX syntax.
 
-\option[latex]{latex}{-, true, false}{}
+\option[latex]{latex}{-, true, false}{false}
 
-This flag simply sets both \texttt{latex comments} and \texttt{latex maths} to its own value. This is processed before the \texttt{latex comments} and \texttt{latex maths} options, so their values will override the \texttt{latex} flag.
+When true, this option simply sets \ttt{latex comments} and \ttt{latex maths} to also be true.
 
 \option{first line}{positive integer}{1}
 
-For \verb|\qoinputlisting|, the first line of trhe file to print. This option as no effect on the \ttt{qolisting} environment.
+This option only has an effect for the \qoinline|\qoinputlisting| command. For all other commands and environments (including \qoinline|\qolstset|), this will not cause an error but will have no effect. For \qoinline|\qoinputlisting|, this is the first line of the file to be printed.
 
 \option{last line}{positive integer}{9999}
 
-For \verb|\qoinputlisting|, the last line of trhe file to print. This option as no effect on the \ttt{qolisting} environment.
+This option only has an effect for the \qoinline|\qoinputlisting| command. For all other commands and environments (including \qoinline|\qolstset|), this will not cause an error but will have no effect. For \qoinline|\qoinputlisting|, this is the last line of the file to be printed.
 
-\option{first number}{positive integer}{1}
+\option{first number}{integer}{1}
 
-The line number from which to start counting.
+This option only has an effect for the \qoinline|\qoinputlisting| command. For all other commands and environments (including \qoinline|\qolstset|), this will not cause an error but will have no effect. For \qoinline|\qoinputlisting|, this is the first line number of the listing.
 
 \option{mdframed options}{any}{\{\}}
 
-This option takes as its argument a list of key-value pairs to be passed to the \texttt{mdframed} package. Again, these should be encased in a single brace only.
-
-These key-value pairs must also be valid options for a style in the \texttt{mdframed} package. These are applied last, after any other key-value pairs are handled for the \texttt{mdframed} environment.
+This option takes as its value any string which would be valid for the \qoinline|\mdframedsetup| macro from the \ttt{mdframed} package. This must be surrounded by single braces only. These options are applied last, after any other options, and so can be used to overwrite anything defined in other options. The global options (set with \qoinline|qolstset{}|) are applied first, followed by the local options.
 
 \option[background]{background}{-, true, false}{false}
 
-If true, the listing is given a background colour of \texttt{BackgroundColour}.
-
-\option[roundedcorners]{rounded corners}{-, true, false}{false}
-
-If true, the listing is given rounded corners with radius 0.5\,em. This has no effect if both \texttt{background} and \texttt{frame} are false.
+When true, the listing is given a coloured background using \texttt{mdframed}.
 
 \option[frame]{frame}{-, true, false, ltrb}{false}
 
-This option handles the frame of the listing. If true, then the listing is given a frame on all four sides. This option can also take any combination of ``\texttt{l}", ``\texttt{t}", ``\texttt{r}", and ``\texttt{b}", which correspond to a left, top, right, and bottom edge frame. Any combination of these (in any order) will draw a frame on each edge given. For example, \texttt{frame = blr} will draw a frame on all but the top edge. If \ttt{frame} is passed as a package argument, its value \textbf{cannot} be left blank; you must pass \ttt{frame = true} (or similar).
+When true, a frame will be drawn around the listing. Instead of passing \qoinline|true| or \qoinline|false|, a string can be passed which contains some combination of the letters \qoinline|l|, \qoinline|t|, \qoinline|r|, and \qoinline|b| (currently these must be lowercase). For each letter present an edge will be drawn on the left, top, right, and bottom of the listing respectively. For example, \qoinline|frame = tb| would draw an edge at the top and bottom of the listing.
 
-Also note that no checks are in place to prevent unacceptable values from being passed to \ttt{frame}; with the exception of the words ``\ttt{true}" and ``\ttt{false}", any string passed as the value of \ttt{frame} will be searched for an instance of the letters ``\texttt{l}", ``\texttt{t}", ``\texttt{r}", and ``\texttt{b}", and frames will be rendered accordingly. For example, accidentally passing the value ``\ttt{fasle}" will result in a single edge drawn on the left of the listing.
+Note that currently there is no check for strings containing additional letters; that is, any string which is not exactly ``\qoinline|true|" or ``\qoinline|false|" will be searched for any of the letters \qoinline|l|, \qoinline|t|, \qoinline|r|, and \qoinline|b|. This can lead to false positives; passing the misspelling \qoinline|frame = fasle| would draw a line along the left edge.
+
+\option[roundedcorners]{rounded corners}{-, true, false}{false}
+
+If true, then the frame and background (if present) will be drawn with rounded corners. By default, these will have a radius of 0.5\,em, but this can be changed using the \ttt{mdframed options} key.
 
 \section{Examples}
 
-For the purposes of examples, a python file \ttt{exampleCode.py} is used. This file consists of, verbatim and without formatting,
-\begin{mdframed}\leavevmode
-    \lstinputlisting{./exampleCode.py}
-\end{mdframed}
-
-All the following examples use the \verb|\qoinputlisting| command, but exactly the same behaviour would be achieved using the \verb|qolisting| environment and directly inputting the contents of the file; they will (in theory) be rendered identically.
-
-Before the following examples, we will use \verb|\qolstset| to set the language to Python:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qolstset{lst options = {language = Python}}
+For all of the following examples, the language Python will be used:
+\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}]
+    \qolstset{lst options = {language = Python}}
 \end{qolisting}
 \qolstset{lst options = {language = Python}}
+The \LaTeX{} code is given in an \textcolor{Accent3}{orange border}, while the resultant listing is shown on below.
+
+\subsection{Default}
+
+\example{default.tex}
 
 \clearpage
+\subsection{\ttt{lst options}}
 
-With no other options set, \ttt{qolistings} will render the code as the following:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting{exampleCode.py}
-\end{qolisting}
-\qoinputlisting{exampleCode.py}
-
-Note that with no frame or background, the listing is aligned on the left with the main body text. When a frame or background is specified, the frame is instead aligned at the margins with the main body text, and the margin of the line numbers is adjusted such that their position remains unchanged
-
-We may add a background and frame quite easily:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame]{exampleCode.py}
-
+\example{lstoptions.tex}
 \clearpage
+\subsection{\ttt{lst early options}}
 
-We may also wish to add rounded corners:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners]{exampleCode.py}
+\example{lstearlyoptions.tex}
+Note that since \ttt{stringstyle} is already set in the style, nothing changes here. This option can be useful of multiple styles are being used.
 
-We can also use the frame options to convincingly split a file and add some commentary in the middle:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame = ltr, rounded corners, first line = 1, last line = 6]{exampleCode.py}
-\lipsum[1]
-\qoinputlisting[background, frame = ltr, rounded corners, first line = 7, first number = 7]{exampleCode.py}
-\end{qolisting}
+\qolstset{style = exampleStyle}
 
-\qoinputlisting[background, frame = ltr, rounded corners, first line = 1, last line = 6]{exampleCode.py}
-\lipsum[1]
-\qoinputlisting[background, frame = lbr, rounded corners, first line = 7, first number = 7]{exampleCode.py}
+\qoinputlisting{./listings/lstoptions.tex}
 
-Note that it is important to use the \ttt{qolistings} options \ttt{first line}, \ttt{last line}, and \ttt{first number} instead of passing the corresponding options \ttt{firstline}, \ttt{lastline}, and \ttt{firstnumber} to \ttt{listings} via \ttt{lst options}.\ \textbf{This will not work}, as \ttt{listings} will ignore these options when processing the key-value pairs. Unfortunately, \ttt{first line} and \ttt{last line} will have no effect in the \ttt{qolisting} environment, though it is difficult to imagine a situation in which these would be necessary.
-
-
-Now lets explore escaping to \LaTeX{}. We can use the options \ttt{latex comments} to render anything contained within the default escape tokens (\ttt{(*} and \ttt{*)}) as \LaTeX{}. This can be quite handy for describing formulae used in code.
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners, latex comments]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners, latex comments]{exampleCode.py}
-
-Alternatively, we can choose to escape to \LaTeX{} only for maths using the \ttt{latex maths} (the U.S. spelling \ttt{latex math} is also allowed).
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners, latex maths]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners, latex maths]{exampleCode.py}
-
-
-If we wish to render both comments and maths in \LaTeX{}, we could specify both \ttt{latex comments} and \ttt{latex maths}, or we could simply pass the option \ttt{latex}:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners, latex]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners, latex]{exampleCode.py}
-
-Let's suppose we want to highlight a particular listing by changing the frame colour. We can do this by passing the relevant options to \ttt{mdframed}:
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners, mdframed options = {linecolor = Accent3}]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners, mdframed options = {linecolor = Accent3}]{exampleCode.py}
-
-Another point worthy of note is that, since both \ttt{mdframed} and \ttt{listings} packages handle page breaks well, \ttt{qolistings} can also break is a consistent and well-behaved manner at page breaks.
-\begin{qolisting}[lst options = {language = {[LaTeX]TeX}}, frame, background]
-\qoinputlisting[background, frame, rounded corners, mdframed options = {linecolor = Accent3}]{exampleCode.py}
-\end{qolisting}
-\qoinputlisting[background, frame, rounded corners, mdframed options = {linecolor = Accent3}]{exampleCode.py}
+% \clearpage
+% \subsection{\ttt{style}}
+%
+% \example{style.tex}
 
 \end{document}
